# rankparse-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
rankparse/: __init__.py  _client.py  async_client.py  client.py  errors.py
tests/: conftest.py  test_async_client.py  test_client.py
