[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rankparse"
version = "0.1.0"
description = "Official Python SDK for the RankParse SEO API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "RankParse" }]
keywords = ["seo", "backlinks", "api", "rankparse"]
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "anyio[trio]", "hatch"]

[project.urls]
Homepage = "https://rankparse.com"
Repository = "https://github.com/abhibavishi/rankparse-python"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["rankparse"]
